--- a/assets/css/screen.post.css
+++ b/assets/css/screen.post.css
@@ -660,11 +660,6 @@ body {
   }
 }
 
-.left,
-.right {
-  width: calc(45% - 2rem);
-}
-
 @media screen and (min-width: 37em) {
   .left,
   .right {
@@ -686,24 +681,18 @@ body {
   }
 }
 
-.left {
-  float: left;
-  clear: left;
-}
-
 @media screen and (min-width: 37em) {
   .left {
+    float: left;
+    clear: left;
     margin-right: 2rem;
   }
 }
 
-.right {
-  float: right;
-  clear: right;
-}
-
 @media screen and (min-width: 37em) {
   .right {
+    float: right;
+    clear: right;
     margin-left: 2rem;
   }
 }
@@ -3211,13 +3200,11 @@ h6:target .heading-anchor {
   }
 }
 
-@media screen and (min-width: 37em) {
-  .embed--posh-right {
-    float: right;
-    clear: right;
-    margin-right: 0;
-    margin-left: 4rem;
-  }
+.embed--posh-right {
+  float: right;
+  clear: right;
+  margin-right: 0;
+  margin-left: 4rem;
 }
 
 .embed--posh-right.embed--size-small,
